# friday-simd

./: README.md  friday-simd.cabal
bench/: Benchmark.hs
src/Vision/Histogram/: Simd.c  Simd.hs
src/include/: avx.h  avx2.h  sse41.h
