name:                   friday-simd
version:                0.0.0
synopsis:               Optimized vectoized routines for the friday image library.
homepage:               https://github.com/RaphaelJ/friday-simd
license:                LGPL-3
license-file:           LICENSE
author:                 Raphael Javaux <raphaeljavaux[at]gmail.com>
maintainer:             Raphael Javaux <raphaeljavaux[at]gmail.com>
category:               Graphics
stability:              Experimental
build-type:             Simple
cabal-version:          >= 1.10

Flag sse41
    Description:        Enable SSE 4.1 optimisations.
    Default:            False

library
    exposed-modules:    Vision.Histogram.Simd

    ghc-options:        -Wall -O2
    hs-source-dirs:     src/
    default-language:   Haskell2010

    c-sources:          src/Vision/Histogram/Simd.c

    if flag(sse41)
        cc-options:     -Wall -O3 -msse4.1 -DSSE41
    else
        cc-options:     -Wall -O3

    build-depends:      base                     >=4.7          && < 4.8
                      , friday
                      , vector                   >= 0.10.9.1    && < 0.11

Benchmark benchmark
    type:               exitcode-stdio-1.0

    main-is:            Benchmark.hs
    ghc-options:        -Wall -O2 -rtsopts
    hs-source-dirs:     bench/
    default-language:   Haskell2010

    build-depends:      base                    >= 4            && < 5
                      , criterion               >= 0.8          && < 1.0
                      , friday
                      , friday-simd

Test-Suite test
    type:               exitcode-stdio-1.0

    main-is:            Test.hs
    ghc-options:        -Wall -O2 -rtsopts
    hs-source-dirs:     test/
    default-language:   Haskell2010

    build-depends:      base                         >= 4            && < 5
                      , QuickCheck                   >= 2.6          && < 3
                      , friday
                      , friday-simd
                      , test-framework               >= 0.8          && < 0.9
                      , test-framework-quickcheck2   >= 0.3.0.2      && < 0.4
                      , vector                       >= 0.10.0.1     && < 1.0
